# fire

./: .bazelrc  .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  bazel-bin  bazel-fire.git  bazel-out  bazel-testlogs  requirements.txt  requirements_lock.txt
.github/workflows/: ci.yaml
docs/: USAGE.md
examples/: BUILD.bazel  BUILD.bazel.inline  BUILD.bazel.python  BUILD.bazel.starlark  README.md  VehicleParamsTest.java  vehicle_params.bzl  vehicle_params.json  vehicle_params.yaml  vehicle_params_test.cc  vehicle_params_test.go  vehicle_params_test.py  vehicle_params_test.rs
examples/brake_actuator/doc/: brake_actuator.swreq.md  brake_actuator.techspec.md
examples/brake_control/doc/: brake_controller.swreq.md  brake_controller.techspec.md
examples/requirements/: REQ-BRK-001.md  REQ-BRK-001.sysreq.md  REQ-VEL-001.md  REQ-VEL-001.sysreq.md  REQ-WHEEL-001.md  REQ-WHEEL-001.sysreq.md  braking_requirements.sysreq.md  velocity_requirements.sysreq.md  wheel_requirements.sysreq.md
examples/system_functions/: braking_control.sysarch.md
examples/vehicle_status/doc/: vehicle_status.swreq.md  vehicle_status.techspec.md
fire/: BUILD.bazel  __init__.py
fire/parameters/: BUILD.bazel  __init__.py  cpp_generator.py  cpp_generator_test.py  validator.py  validator_test.py
fire/rules/: BUILD.bazel  parameters.bzl
fire/starlark/: BUILD.bazel  cpp_generator.bzl  cpp_generator_test.bzl  generate_report.py  go_generator.bzl  java_generator.bzl  markdown_parser.bzl  markdown_parser_test.bzl  parameters.bzl  parameters_inline.bzl  parameters_v2.bzl  python_generator.bzl  reference_validator.bzl  reference_validator_test.bzl  reports.bzl  requirement_validator.bzl  requirement_validator_test.bzl  requirements.bzl  rust_generator.bzl  rust_generator_test.bzl  swreq_parser.bzl  swreq_validator.bzl  swreq_validator_test.bzl  traceability.bzl  traceability_test.bzl  validate_cross_references.py  validator.bzl  validator_test.bzl  version_validator.bzl  version_validator_test.bzl
fire/tools/: BUILD.bazel  generate_cpp_parameters.py  validate_parameters.py
