"""
Fire - Requirements Management System for Bazel
"""

module(
    name = "fire",
    version = "0.1.0",
    compatibility_level = 1,
)

# C++ rules for generated code
bazel_dep(name = "rules_cc", version = "0.0.9")

# Skylib for unittest framework
bazel_dep(name = "bazel_skylib", version = "1.5.0")
