"""
Fire - Requirements Management System for Bazel
"""

module(
    name = "fire",
    version = "0.1.0",
    compatibility_level = 1,
)

# C++ rules for generated code
bazel_dep(name = "rules_cc", version = "0.0.9")

# Rust rules for generated code
bazel_dep(name = "rules_rust", version = "0.54.1")

# Skylib for unittest framework
bazel_dep(name = "bazel_skylib", version = "1.5.0")

# Rust toolchain setup
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")
