load("@rules_cc//cc:defs.bzl", "cc_test")
load(
    "//fire/starlark:parameters.bzl",
    "cc_parameter_library",
    "go_parameter_library",
    "java_parameter_library",
    "parameter_library",
    "python_parameter_library",
)
load("//fire/starlark:requirements.bzl", "requirement_library")
load(":vehicle_params.bzl", "VEHICLE_PARAMS")

# Define parameters (loaded from separate .bzl file for better organization)
parameter_library(
    name = "vehicle_params_header",
    namespace = "vehicle.dynamics",
    parameters = VEHICLE_PARAMS,
)

# Create CC library from parameters
cc_parameter_library(
    name = "vehicle_params_cc",
    parameter_library = ":vehicle_params_header",
)

# Generate Python parameters
python_parameter_library(
    name = "vehicle_params_py",
    namespace = "vehicle.dynamics",
    parameters = VEHICLE_PARAMS,
)

# Generate Java parameters
java_parameter_library(
    name = "vehicle_params_java",
    class_name = "VehicleParams",
    namespace = "com.example.vehicle.dynamics",
    parameters = VEHICLE_PARAMS,
)

# Generate Go parameters
go_parameter_library(
    name = "vehicle_params_go",
    package_name = "dynamics",
    namespace = "vehicle.dynamics",  # Namespace for validation (dots are allowed)
    parameters = VEHICLE_PARAMS,
)

# Test that uses the generated parameters
cc_test(
    name = "vehicle_params_test",
    srcs = ["vehicle_params_test.cc"],
    deps = [":vehicle_params_cc"],
)

# Validate requirement documents
requirement_library(
    name = "vehicle_requirements",
    srcs = glob(["requirements/*.md"]),
)
