load("@rules_cc//cc:defs.bzl", "cc_test")
load(
    "//fire/starlark:parameters.bzl",
    "cc_parameter_library",
    "go_parameter_library",
    "java_parameter_library",
    "parameter_library",
    "python_parameter_library",
)
load("//fire/starlark:reports.bzl", "generate_report")
load("//fire/starlark:requirements.bzl", "requirement_library")
load(":vehicle_params.bzl", "VEHICLE_PARAMS")

# Define parameters (loaded from separate .bzl file for better organization)
# Namespace is auto-derived from package path: examples -> examples
parameter_library(
    name = "vehicle_params_header",
    parameters = VEHICLE_PARAMS,
)

# Create CC library from parameters
cc_parameter_library(
    name = "vehicle_params_cc",
    parameter_library = ":vehicle_params_header",
)

# Generate Python parameters
# Auto-derived: examples -> examples (Python module)
python_parameter_library(
    name = "vehicle_params_py",
    parameters = VEHICLE_PARAMS,
)

# Generate Java parameters
# Auto-derived: examples -> examples.examples (with prefix)
java_parameter_library(
    name = "vehicle_params_java",
    class_name = "VehicleParams",
    package_prefix = "com.example",  # Results in: com.example.examples
    parameters = VEHICLE_PARAMS,
)

# Generate Go parameters
# Auto-derived: examples -> package examples
go_parameter_library(
    name = "vehicle_params_go",
    parameters = VEHICLE_PARAMS,
)

# Test that uses the generated parameters
cc_test(
    name = "vehicle_params_test",
    srcs = ["vehicle_params_test.cc"],
    deps = [":vehicle_params_cc"],
)

# Validate requirement documents
requirement_library(
    name = "vehicle_requirements",
    srcs = glob(["requirements/*.md"]),
)

# Generate traceability matrix report
generate_report(
    name = "traceability_matrix",
    srcs = glob(["requirements/*.md"]),
    out = "TRACEABILITY_MATRIX.md",
    report_type = "traceability",
)

# Generate coverage report
generate_report(
    name = "coverage_report",
    srcs = glob(["requirements/*.md"]),
    out = "COVERAGE_REPORT.md",
    report_type = "coverage",
)

# Generate change impact analysis
generate_report(
    name = "change_impact_report",
    srcs = glob(["requirements/*.md"]),
    out = "CHANGE_IMPACT.md",
    report_type = "change_impact",
)

# Generate ISO 26262 compliance report
generate_report(
    name = "compliance_report",
    srcs = glob(["requirements/*.md"]),
    out = "COMPLIANCE_ISO26262.md",
    report_type = "compliance",
    standard = "ISO 26262",
)
