load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "validator",
    srcs = ["validator.py"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "validator_test",
    srcs = ["validator_test.py"],
    deps = [":validator"],
)

py_library(
    name = "cpp_generator",
    srcs = ["cpp_generator.py"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "cpp_generator_test",
    srcs = ["cpp_generator_test.py"],
    deps = [":cpp_generator"],
)

py_library(
    name = "parameters",
    srcs = [
        "__init__.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":cpp_generator",
        ":validator",
    ],
)
