load(":cpp_generator_test.bzl", "cpp_generator_test_suite")
load(":markdown_parser_test.bzl", "markdown_parser_test_suite")
load(":reference_validator_test.bzl", "reference_validator_test_suite")
load(":requirement_validator_test.bzl", "requirement_validator_test_suite")
load(":validator_test.bzl", "validator_test_suite")

exports_files([
    "validator.bzl",
    "cpp_generator.bzl",
    "parameters.bzl",
    "requirement_validator.bzl",
    "reference_validator.bzl",
    "markdown_parser.bzl",
    "traceability.bzl",
    "requirements.bzl",
])

# Unit tests for validator
validator_test_suite(name = "validator_test")

# Unit tests for cpp_generator
cpp_generator_test_suite(name = "cpp_generator_test")

# Unit tests for requirement_validator
requirement_validator_test_suite(name = "requirement_validator_test")

# Unit tests for reference_validator
reference_validator_test_suite(name = "reference_validator_test")

# Unit tests for markdown_parser
markdown_parser_test_suite(name = "markdown_parser_test")
