load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "validate_parameters",
    srcs = ["validate_parameters.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//fire/parameters:validator",
        requirement("pyyaml"),
    ],
)

py_binary(
    name = "generate_cpp_parameters",
    srcs = ["generate_cpp_parameters.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//fire/parameters:cpp_generator",
    ],
)
